autoconf/config.mk.in doesn't ignore the --datarootdir setting anymore.

--- a/canvas/autoconf/config.mk.in
+++ b/canvas/autoconf/config.mk.in
@@ -42,6 +42,7 @@ exec_prefix=	@exec_prefix@
 bindir=		@bindir@
 libdir=		@libdir@
 includedir=	@includedir@/$pkgname$
+datarootdir=	@datarootdir@
 datadir=	@datadir@/modules
 
 # --- Programs ----------------------------------------------------------
