--- a/src/Makefile.in
+++ b/src/Makefile.in
@@ -37,6 +37,7 @@ exec_prefix=	@exec_prefix@
 bindir=		@bindir@
 libdir=		@libdir@
 includedir=	@includedir@
+datarootdir=	@datarootdir@
 datadir=	@datadir@
 
 INSTALL= 	@INSTALL@
