--- a/canvas/Makefile.in
+++ b/canvas/Makefile.in
@@ -35,6 +35,7 @@ builddir=	@builddir@
 
 prefix=		@prefix@
 exec_prefix=	@exec_prefix@
+datarootdir=	@datarootdir@
 datadir=	@datadir@
 
 INSTALL=  @INSTALL@
