--- a/doc/user_guide/Makefile.in
+++ b/doc/user_guide/Makefile.in
@@ -28,13 +28,14 @@
 # ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
 #
 
-top_srcdir=	  @top_srcdir@
-srcdir=		    @srcdir@
-top_builddir=  @top_builddir@
+top_srcdir=	@top_srcdir@
+srcdir=		@srcdir@
+top_builddir=	@top_builddir@
 
-prefix=		    @prefix@
+prefix=		@prefix@
 exec_prefix=	@exec_prefix@
-datadir=	    @datadir@/genom
+datarootdir=	@datarootdir@
+datadir=	@datadir@/genom
 
 INSTALL=  @INSTALL@
 VPATH=		$(srcdir)
