--- a/tclserv/server/Makefile.in
+++ b/tclserv/server/Makefile.in
@@ -28,16 +28,17 @@
 # ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
 #
 
-top_srcdir=	 @top_srcdir@
-srcdir=		   @srcdir@
-top_builddir= @top_builddir@
+top_srcdir=	@top_srcdir@
+srcdir=		@srcdir@
+top_builddir=	@top_builddir@
 
-prefix=		    @prefix@
+prefix=		@prefix@
 exec_prefix=	@exec_prefix@
-bindir=		  @bindir@
-libdir=		  @libdir@
+bindir=		@bindir@
+libdir=		@libdir@
 includedir=	@includedir@/genom
-datadir=	  @datadir@/tclserv
+datarootdir=	@datarootdir@
+datadir=	@datadir@/tclserv
 
 INSTALL=  @INSTALL@
 VPATH=		$(srcdir) $(top_srcdir)/compat
