--- a/emacs/Makefile.in
+++ b/emacs/Makefile.in
@@ -35,7 +35,7 @@ top_builddir=	@top_builddir@
 
 prefix=		@prefix@
 exec_prefix=	@exec_prefix@
-datarorootdir=	@datarootdir@
+datarootdir=	@datarootdir@
 datadir=	@datadir@/genom
 
 INSTALL=  @INSTALL@
