--- a/genom-config.h.in
+++ b/genom-config.h.in
@@ -1,56 +1,3 @@
-/*	$LAAS$ */
-
-/* 
- * Copyright (c) 2003-2007 LAAS/CNRS
- * All rights reserved.
- *
- * Redistribution and use  in source  and binary  forms,  with or without
- * modification, are permitted provided that the following conditions are
- * met:
- *
- *   1. Redistributions of  source  code must retain the  above copyright
- *      notice, this list of conditions and the following disclaimer.
- *   2. Redistributions in binary form must reproduce the above copyright
- *      notice,  this list of  conditions and the following disclaimer in
- *      the  documentation  and/or  other   materials provided  with  the
- *      distribution.
- *
- * THIS  SOFTWARE IS PROVIDED BY  THE  COPYRIGHT HOLDERS AND CONTRIBUTORS
- * "AS IS" AND  ANY  EXPRESS OR IMPLIED  WARRANTIES,  INCLUDING,  BUT NOT
- * LIMITED TO, THE IMPLIED WARRANTIES  OF MERCHANTABILITY AND FITNESS FOR
- * A PARTICULAR  PURPOSE ARE DISCLAIMED. IN  NO EVENT SHALL THE COPYRIGHT
- * HOLDERS OR      CONTRIBUTORS  BE LIABLE FOR   ANY    DIRECT, INDIRECT,
- * INCIDENTAL,  SPECIAL,  EXEMPLARY, OR CONSEQUENTIAL DAMAGES (INCLUDING,
- * BUT NOT LIMITED TO, PROCUREMENT OF  SUBSTITUTE GOODS OR SERVICES; LOSS
- * OF USE, DATA, OR PROFITS; OR BUSINESS INTERRUPTION) HOWEVER CAUSED AND
- * ON ANY THEORY OF LIABILITY, WHETHER IN  CONTRACT, STRICT LIABILITY, OR
- * TORT (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE
- * USE   OF THIS SOFTWARE, EVEN   IF ADVISED OF   THE POSSIBILITY OF SUCH
- * DAMAGE.
- */
-#ifndef H_GENOM_CONFIG
-#define H_GENOM_CONFIG
-
-/* Do we have the BSD sys/cdefs.h ? */
-#undef HAVE_SYS_CDEFS_H
-
-/* Do we have getopt.h ? */
-#undef HAVE_GETOPT_H
-
-#if defined(HAVE_SYS_CDEFS_H) && !defined(__KERNEL__)
-#include <sys/cdefs.h>
-#endif
-
-#ifndef __RCSID
-#ifdef __GNUC__
-#define __RCSID(id) static const char rcsid[] __attribute__((__unused__)) = id
-#else
-#define __RCSID(id) static const char rcsid[] = id
-#endif /* __GNUC__ */
-#endif
-
-#undef GENOM_VERSION
-
 /* genom-config.h.in.  Generated from configure.ac by autoheader.  */
 
 /* Genom's version */
@@ -71,6 +18,9 @@
 /* Define to 1 if you have the <memory.h> header file. */
 #undef HAVE_MEMORY_H
 
+/* Define to 1 if you have the `setenv' function. */
+#undef HAVE_SETENV
+
 /* Define to 1 if you have the <stdint.h> header file. */
 #undef HAVE_STDINT_H
 
@@ -82,6 +32,9 @@
 
 /* Define to 1 if you have the <string.h> header file. */
 #undef HAVE_STRING_H
+
+/* Define to 1 if you have the `strsep' function. */
+#undef HAVE_STRSEP
 
 /* Define to 1 if you have the <sys/cdefs.h> header file. */
 #undef HAVE_SYS_CDEFS_H
@@ -120,4 +73,12 @@
    `char[]'. */
 #undef YYTEXT_POINTER
 
-#endif /* H_GENOM_CONFIG */
+
+#ifndef __RCSID
+#ifdef __GNUC__
+#define __RCSID(id) static const char rcsid[] __attribute__((__unused__)) = id
+#else
+#define __RCSID(id) static const char rcsid[] = id
+#endif /* __GNUC__ */
+#endif
+
