Don't hardcode 'make' in the regen target
Use '${MAKE}' instead of 'make' in the regen target, for the few systems
on which make is not GNUmake ...

Fixes https://softs.laas.fr/bugzilla/show_bug.cgi?id=66

--- a/canvas/Makefile.top.in
+++ b/canvas/Makefile.top.in
@@ -109,7 +109,7 @@ regen: standalone-regen
 	    ./config.status --recheck; \
 	fi
 	@./config.status
-	make depend
+	${MAKE} depend
 
 # --- pkgconfig ---------------------------------------------------------
 ALL_PKGCONFIG := $pkgname$.pc $(addsuffix .pc,@EXTRA_PKGCONFIG@)
