--- a/canvas/autoconf/configure.ac.in
+++ b/canvas/autoconf/configure.ac.in
@@ -28,7 +28,7 @@ AC_PROG_LIBTOOL
 AC_SUBST(LIBTOOL_DEPS)
 
 ROBOT_CFLAGS
-CFLAGS="${C_DEBUG_FLAGS} ${C_WARNING_FLAGS}"
+test -z "$CFLAGS" && CFLAGS="${C_DEBUG_FLAGS} ${C_WARNING_FLAGS}"
 
 ROBOT_PROG_MKDEP
 
