complete .gitignore for in-tree builds.

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,28 @@
+.libs
+DEPENDANCES
+Makefile
 autom4te.cache
+canvas/autoconf/configure.ac
+canvas/autogen
+config.log
+config.mk
+config.status
+doc/user_guide/genom.log
+doc/user_guide/genom.out
+doc/user_guide/genom.pdf
+doc/user_guide/genom.toc
+genom-config.h
+genom.pc
+src/genom
+src/parser.lex.c
+src/parser.output
+src/parser.tab.c
+src/parser.tab.h
+tclserv/client/pkgIndex.tcl.2.1
+tclserv/server/tclserv
+libtool
+*.la
+*.lo
+*.o
 *~
 *.aux
