use PACKAGE_NAME instead of PACKAGE_TARNAME for make dist.
PACKAGE_TARNAME is converted into all lowercase, but the OpenRobot
tradition is too keep camelCase in file names and tags.

--- a/canvas/Makefile.top.in
+++ b/canvas/Makefile.top.in
@@ -48,7 +48,7 @@ srcdir=		@srcdir@
 
 INSTALL=	@INSTALL@
 
-dist_name=	@PACKAGE_TARNAME@-@PACKAGE_VERSION@
+dist_name=	@PACKAGE_NAME@-@PACKAGE_VERSION@
 
 include $(top_builddir)/config.mk
 
