Add -I$prefix/include to cflags for module clients.
In theory we should be able to get rid of the -I$prefix/include/module
option, since everyone should use <module/header.h> and not <header.h>
when including a header, unfortunatly this is not yet true.

And since pocolibs already pulls a -I$prefix/include option, this is
almost redundant, except for a few cases, like if pocolibs and genom are
installed with different prefixes.

--- a/canvas/autoconf/module.pc.in
+++ b/canvas/autoconf/module.pc.in
@@ -1,7 +1,7 @@
 prefix=@prefix@
 exec_prefix=@exec_prefix@
 libdir=@libdir@
-includedir=@includedir@/$pkgname$
+includedir=@includedir@
 genomfile=$genomFile$
 genomflags=$genomFlags$
 cppflags=$cppOptions$
@@ -11,4 +11,4 @@ Description: $module$ Genom module
 Version: @PACKAGE_VERSION@
 Requires: genom >= $genomVersion$ $require$
 Libs: -L${libdir} -l$module$Client
-Cflags: -I${includedir}
+Cflags: -I${includedir} -I${includedir}/$pkgname$
