--- a/canvas/autogen.in
+++ b/canvas/autogen.in
@@ -3,33 +3,6 @@ use strict;
 
 my $user = "configure.ac.user";
 
-sub check_aclocal_version {
-    my ($major, $minor) = @_;
-    # We need aclocal >= 1.7
-    my @version = `aclocal --version`;
-
-    my $version_line = shift @version;
-    if ($version_line !~ /^aclocal \(GNU automake\) (\d+)\.(\d+)/) 
-    {
-        print <<EOF;
-You don't seem to have a valid version of aclocal. I was expecting
-aclocal --version to return "aclocal (GNU automake) <major>.<minor>.<revision>", but
-I got $version_line
-EOF
-        exit;
-    }
-
-    if (($major > $1) 
-        || (($major eq $1) && ($minor > $2)))
-    {
-        print "Unsupported aclocal version $1.$2, you need at least $major.$minor\n";
-        exit;
-    }
-
-}
-    
-check_aclocal_version(1, 7);
-
 # Check for a few files (Genom -> OpenGenom migration)
 if ( ! -f $user || ! -f "local.mk.in" || ! -f "codels/Makefile.in" ) {
     print "You're missing one of configure.ac.user, autoconf/local.mk.in, codels/Makefile.in\n";
@@ -39,9 +12,7 @@ if ( ! -f $user || ! -f "local.mk.in" || ! -f "codels/Makefile.in" ) {
 
 print "
 Creating build environment ...
-  * Running aclocal\n";
-exit 1 if system("cd autoconf && aclocal -I .. -I .");
-print "  * Running autoconf\n";
+  * Running autoconf\n";
 exit 1 if system("cd autoconf && autoconf -o ../configure");
 
 print "
