Make sure that include files are found from local dir before anything else
If a CPPFLAGS is inherited from the environment and it contains include
directives where some genom header files are already present, this might make
the compilation fail (or generate a wrong binary).
So make sure that local directories are always scanned first.

This fixes the "make replace" target of genom in robotpkg.

--- a/lib/Makefile.in
+++ b/lib/Makefile.in
@@ -42,7 +42,7 @@ VPATH=		$(srcdir)
 
 include $(top_builddir)/config.mk
 
-CPPFLAGS+=	-I$(top_builddir) -I$(top_srcdir)/include -I$(srcdir) -I.
+CPPFLAGS:= -I$(top_builddir) -I$(top_srcdir)/include -I$(srcdir) -I. $(CPPFLAGS)
 CPPFLAGS+= $(PORTLIB_CFLAGS) -D$(ENDIANNESS)
 
 SHLIB_CURRENT=	2
