--- a/src/Makefile.in
+++ b/src/Makefile.in
@@ -1,6 +1,6 @@
 
 #
-# Copyright (c) 2003,2008 LAAS/CNRS
+# Copyright (c) 2003,2008-2009 LAAS/CNRS
 # All rights reserved.
 #
 # Redistribution  and  use in source   and binary forms,  with or without
@@ -44,7 +44,7 @@ VPATH=		$(srcdir) $(top_srcdir)/compat
 
 include $(top_builddir)/config.mk
 
-CPPFLAGS+=	-I$(top_builddir) -I$(top_srcdir)/include -I$(srcdir) -I.
+CPPFLAGS:=	-I$(top_builddir) -I$(top_srcdir)/include -I$(srcdir) -I. $(CPPFLAGS)
 CPPFLAGS+=	$(PORTLIB_CFLAGS)
 
 LDFLAGS+=	@LEXLIB@
