--- a/canvas/autoconf/configure.ac.in
+++ b/canvas/autoconf/configure.ac.in
@@ -7,6 +7,7 @@ AC_INIT($module$-genom, $version$, $email$)
 AC_CONFIG_AUX_DIR(autoconf)
 
 m4_include([libtool.m4])
+m4_include([pkg.m4])
 m4_include([robots.m4])
 m4_sinclude([../acinclude.user.m4])
 
