Add 'extern "C"' declaration to genom{Give,Take}SDIs prototypes.
While there, whack the genomModulesLibProto.h header that only contained
those 2 prototypes.

Problem found by Anthony.

--- a/include/Makefile.in
+++ b/include/Makefile.in
@@ -54,8 +54,7 @@ flist = \
 				genom/printScan.h \
 				genom/printStateProto.h \
 				genom/printXMLProto.h \
-				genom/scanProto.h \
-				genom/genomModulesLibProto.h
+				genom/scanProto.h
 
 # -----------------------------------------------------------------------
 
