--- a/canvas/autoconf/module-oprs.pc.in
+++ b/canvas/autoconf/module-oprs.pc.in
@@ -2,11 +2,11 @@ prefix=@prefix@
 exec_prefix=@exec_prefix@
 libdir=@libdir@
 oprslibdir=@libdir@/openprs
-includedir=@includedir@/$pkgname$
+includedir=@includedir@
 
 Name: $pkgname$-oprs
 Description: $module$ Genom module
 Version: @PACKAGE_VERSION@
 Requires: genom >= $genomVersion$ $require$
 Libs: -L${libdir} -l$module$Client -L${oprslibdir} -l$module$Openprs
-Cflags: -I${includedir}
+Cflags: -I${includedir} -I${includedir}/$pkgname$
