Define shell variable with genom flags for optional steps in configure
Define three new variables in the configure script:
genServer, genTcl and genOpenprs, set to "yes" or "no" depending on the options
passed to genom.

This is useful to make decisions based on these genom option in the
configure.ac.user script.

--- a/canvas/autoconf/configure.ac.in
+++ b/canvas/autoconf/configure.ac.in
@@ -13,6 +13,9 @@ m4_sinclude([../acinclude.user.m4])
 
 ABI_VERSION_INFO=$iface_version$
 AC_SUBST(ABI_VERSION_INFO)
+genServer="$genServer$"
+genTcl="$genTcl$"
+genOpenprs="$genOpenprs$"
 
 AC_CANONICAL_HOST
 
