Fix a glitch for in-tree builds.
When building in-tree, the VPATH in $(top_srcdir)/lib introduced in 2ce30b0
finds the printScanUtil.lo libtool object (in lib) and don't rebuild it
locally. It is necessary to rewrite the genom binary linkage rule could to use
$^ instead of ${OBJS} so that the VPATH to printScanUtil.lo is propagated to
the link command. Out-of-tree builds did not have this issue.

This problem was introduced in 2ce30cb0. Hi Matthieu!

--- a/src/Makefile.in
+++ b/src/Makefile.in
@@ -1,6 +1,6 @@
 
 #
-# Copyright (c) 2003,2008-2009 LAAS/CNRS
+# Copyright (c) 2003,2008-2010 LAAS/CNRS
 # All rights reserved.
 #
 # Redistribution  and  use in source   and binary forms,  with or without
@@ -98,8 +98,8 @@ install: all
 	$(MKINSTALLDIRS) ${DESTDIR}$(bindir)
 	$(LTINSTALL) $(GENOM) ${DESTDIR}$(bindir)
 
-$(GENOM): $(OBJS) ../lib/lib$(GENOM).la
-	$(LTLD) -static $(CFLAGS) $(OBJS) -o $@ 
+$(GENOM): $(OBJS)
+	$(LTLD) -static $(CFLAGS) $^ -o $@
 
 parser.tab.lo: parser.tab.c
 	$(LTCC) -static -c $(CPPFLAGS)  $(CFLAGS)	\
