Implement decode stuff for tclserv C client

--- a/canvas/Makefile.in
+++ b/canvas/Makefile.in
@@ -122,7 +122,8 @@ flist+=\
 
 # Tclserv templates
 flist+= \
-	server/tclservClient/tclservClientEncode.h
+	server/tclservClient/tclservClientEncode.h \
+	server/tclservClient/tclservClientDecode.h 
 
 # codels templates
 flist+=\
