Improve build of libtclserv_client
Search of the LIB_TCLSERv_CLIENT through pkg-config
Use it in the build of the libtclserv_client

--- a/canvas/autoconf/config.mk.in
+++ b/canvas/autoconf/config.mk.in
@@ -137,6 +137,9 @@ $genOpenprs$TRANSGEN_LIBS = @TRANSGEN_LIBS@
 $genOpenprs$OPENPRS_CFLAGS  = @OPENPRS_CFLAGS@
 $genOpenprs$OPENPRS_LIBS    = @OPENPRS_LIBS@
 
+$genTclservClient$TCLSERV_CLIENT_LIB_CFLAGS = @TCLSERV_CLIENT_LIB_CFLAGS@
+$genTclservClient$TCLSERV_CLIENT_LIB_LIBS = @TCLSERV_CLIENT_LIB_LIBS@
+
 GENOM_CFLAGS=	@GENOM_CFLAGS@
 GENOM_LIBS=	@GENOM_LIBS@
 
