--- a/canvas/server/Makefile.in
+++ b/canvas/server/Makefile.in
@@ -221,7 +221,8 @@ $(OBJDIR)/$(OPENPRSCLIENT_LIB): $(oprsclient_obj)
 
 $(OBJDIR)/$(TCLSERVCLIENT_LIB): $(tclservclient_obj)
 	$(LTLD) $(CFLAGS) $(tclservclient_obj) $(SERVERS_ENDIAN_LIB) -o $@ \
-		$(LIBTOOL_LINKOPT) $(GENOM_LIBS) $(LDFLAGS) $(LIBTOOL_VERSION_INFO)
+		$(LIBTOOL_LINKOPT) $(TCLSERV_CLIENT_LIB_LIBS) \
+		$(LDFLAGS) $(LIBTOOL_VERSION_INFO)
 
 # --- binaries ----------------------------------------------------------
 
@@ -247,7 +248,8 @@ $(oprsclient_obj): $(OBJDIR)/%.lo: %.c
 		$(CFLAGS) -o $@ $<  $(LIBTOOL_COPT)
 
 $(tclservclient_obj): $(OBJDIR)/%.lo: %.c
-	$(LTCC) -c $(CPPFLAGS) $(CFLAGS) -o $@ $< $(LIBTOOL_COPT)
+	$(LTCC) -c $(CPPFLAGS) $(TCLSERV_CLIENT_LIB_CFLAGS) \
+		$(CFLAGS) -o $@ $< $(LIBTOOL_COPT)
 
 $(OBJDIR)/%.lo: %.c
 	$(LTCC) -c $(CPPFLAGS) $(CFLAGS) -o $@ $< $(LIBTOOL_COPT)
