Correct build of tclserv_client modules with dependencies

--- a/canvas/autoconf/config.mk.in
+++ b/canvas/autoconf/config.mk.in
@@ -140,6 +140,9 @@ $genOpenprs$OPENPRS_LIBS    = @OPENPRS_LIBS@
 $genTclservClient$TCLSERV_CLIENT_LIB_CFLAGS = @TCLSERV_CLIENT_LIB_CFLAGS@
 $genTclservClient$TCLSERV_CLIENT_LIB_LIBS = @TCLSERV_CLIENT_LIB_LIBS@
 
+$genTclservClient$TCLSERV_CLIENT_LIB_OTHER_CFLAGS=  $tclserv_client_cflags$
+$genTclservClient$TCLSERV_CLIENT_LIB_OTHER_LIBS=  $tclserv_client_libs$
+
 GENOM_CFLAGS=	@GENOM_CFLAGS@
 GENOM_LIBS=	@GENOM_LIBS@
 
