Fix rpath stuff for tclserv_client

--- a/canvas/server/Makefile.in
+++ b/canvas/server/Makefile.in
@@ -221,7 +221,7 @@ $(OBJDIR)/$(OPENPRSCLIENT_LIB): $(oprsclient_obj)
 
 $(OBJDIR)/$(TCLSERVCLIENT_LIB): $(tclservclient_obj)
 	$(LTLD) $(CFLAGS) $(tclservclient_obj) -o $@ \
-		$(LIBTOOL_LINKOPT) $(TCLSERV_CLIENT_LIB_LIBS) \
+		$(LIBTOOL_LINKOPT_TCLSERV_CLIENT) $(TCLSERV_CLIENT_LIB_LIBS) \
 		$(TCLSERV_CLIENT_LIB_OTHER_LIBS) \
 		$(LDFLAGS) $(LIBTOOL_VERSION_INFO)
 
