Update for libtool 2.x

--- a/.gitignore
+++ b/.gitignore
@@ -11,8 +11,18 @@ doc/user_guide/genom.log
 doc/user_guide/genom.out
 doc/user_guide/genom.pdf
 doc/user_guide/genom.toc
+doc/slides/genom.nav
+doc/slides/genom.pdf
+doc/slides/genom.snm
+doc/slides/genom.toc
+doc/slides/genom.vrb
 genom-config.h
 genom.pc
+m4/libtool.m4
+m4/ltoptions.m4
+m4/ltsugar.m4
+m4/ltversion.m4
+m4/lt~obsolete.m4
 src/genom
 src/parser.lex.c
 src/parser.output
@@ -20,7 +30,8 @@ src/parser.tab.c
 src/parser.tab.h
 tclserv/client/pkgIndex.tcl.2.1
 tclserv/server/tclserv
-libtool
+tclserv/doc/slides/tclserv.depend
+tclserv/doc/slides/tclserv.dvi
 *.la
 *.lo
 *.o
