Don't create an empty share/genom/${PACKAGE_VERSION}/openprs directory.
The openprs files are installed in ../server/openprs.
Noticed while updating the 2.6 PLIST in robotpkg.

--- a/canvas/Makefile.in
+++ b/canvas/Makefile.in
@@ -150,7 +150,7 @@ genlist = \
 	autoconf/configure.ac \
 	autogen
 
-dirs=autoconf codels openprs server server/tcl server/openprs server/tclservClient
+dirs=autoconf codels server server/tcl server/openprs server/tclservClient
 
 # -----------------------------------------------------------------------
 
