add editval.tcl and tkgenom.tcl in install list

--- a/tclserv/client/Makefile.in
+++ b/tclserv/client/Makefile.in
@@ -55,7 +55,9 @@ tlist=\
 	load.tcl	\
 	misc.tcl	\
 	pmtools.tcl	\
-	server.tcl
+	server.tcl      \
+	tkgenom.tcl	\
+	editval.tcl
 
 pkgfile= pkgIndex.tcl
 
