--- a/configure.ac
+++ b/configure.ac
@@ -1,9 +1,9 @@
 dnl
-dnl configure.in --
+dnl configure.ac --
 dnl	process this file with autoconf to produce a configure script.
 dnl
 
-AC_INIT([genom],[2.6],[openrobots@laas.fr])
+AC_INIT([genom],[2.6.99],[openrobots@laas.fr])
 AC_PREREQ(2.59)
 
 AC_CONFIG_HEADER(genom-config.h)
