Implement an error representation for tclserv_client
tclserv_client is more or less standalone (it only requieres
libtclserv_client) so we don't want to use the "standard" error system
using errorLib (and its friends).

--- a/canvas/Makefile.in
+++ b/canvas/Makefile.in
@@ -123,6 +123,8 @@ flist+=\
 
 # Tclserv templates
 flist+= \
+	server/tclservClient/error.c \
+	server/tclservClient/error.h \
 	server/tclservClient/tclservClientEncode.h \
 	server/tclservClient/tclservClientDecode.h \
 	server/tclservClient/tclservClientMsgLib.c \
