Use an int to represent an error in the tclservClientMsgLib interface.
In this way, the interface is easier to use (we don't need to free or
not free memory allocated by the internals of MsgLib). The int is
normally in the range of $module$_error_t

--- a/canvas/server/Makefile.in
+++ b/canvas/server/Makefile.in
@@ -152,11 +152,13 @@ oprsclient_data = \
 	openprs/$module$Openprs.inc openprs/$module$Openprs.opf openprs/$module$Openprs.sym
 
 tclservclient_src=\
+	tclservClient/$module$Error.c \
 	tclservClient/$module$TclservClientEncode.c \
 	tclservClient/$module$TclservClientDecode.c \
 	tclservClient/$module$TclservClientMsgLib.c
 tclservclient_obj=$(tclservclient_src:%.c=$(OBJDIR)/%.lo)
 tclservclient_headers=\
+	tclservClient/$module$Error.h \
 	tclservClient/$module$TclservClientEncode.h \
 	tclservClient/$module$TclservClientDecode.h \
 	tclservClient/$module$TclservClientMsgLib.h
